--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Alex's Website</title>
-        <link rel="stylesheet" href="assign2.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div>
@@ -32,6 +32,6 @@
          </div>
 
          <div id="result" class="reslt"></div>
-         <script src="assign2.js"></script>
+         <script src="index.js"></script>
     </body>
 </html>
