--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div>
         <form action="">
-            <label for="inputString">Enter String</label>
+            <label for="inputString">Enter a String</label>
             <input type="text" id="inputString" value="" placeholder="Enter String">
             <button id="checkButton">Check for Vowels</button> 
          </form>
@@ -15,7 +15,7 @@
         <div id="result3" class="reslt"></div>
          <div>
             <form action="">
-                <label for="inputNumber">Enter Number</label>
+                <label for="inputNumber">Enter a Number</label>
                 <input type="number" id="inputNumber" value="" placeholder="Enter Number">
                 <button id="checkP">Check for palindrome</button>
              </form>
